Bluedavy notes